# arm-clion-tdd

./: .gitignore  CMakeLists.txt  README.md  arm-cmake-toolchains.cmake
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
src/: main.c
tests/: CMakeLists.txt  example_add.cpp
